--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container even-columns">
-        <h2>Lado A</h2>
-        <h2>Lado B</h2>
-      </div>
-    </header>
+    <div class="flex gap-1">
+      <a href="#" class="social" aria-label="tiktok"></a>
+      <a href="#" class="social" aria-label="instagram"></a>
+      <a href="#" class="social" aria-label="twitter"></a>
+      <a href="#" class="social" aria-label="discord"></a>
+    </div>
   </body>
 </html>
